# tethersim

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: gui.rs  main.rs  physics.rs  visualization.rs
