[package]
name = "tethersim"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.17.2", features = ["jpeg"] }
bevy_egui = "0.38"
image = { version = "0.25.9", default-features = false, features = ["gif"] }
minimp4 = "0.1.2"
openh264 = "0.9.3"
rayon = "1.11.0"
